--- a/databases/Makefile
+++ b/databases/Makefile
@@ -169,8 +169,10 @@ SUBDIR += py-apsw
 SUBDIR += py-berkeleydb
 SUBDIR += py-bsddb3
 SUBDIR += py-cassandra-driver
+SUBDIR += py-flask-sqlalchemy
 SUBDIR += py-gdbm
 SUBDIR += py-hiredis
+SUBDIR += py-mongoengine
 SUBDIR += py-mysql2pgsql
 SUBDIR += py-postgresql
 SUBDIR += py-pg8000
@@ -187,6 +189,7 @@ SUBDIR += py-sqlalchemy10
 SUBDIR += py-sqlalchemy14
 SUBDIR += py-sqlalchemy20
 SUBDIR += py-sqlalchemy-migrate
+SUBDIR += py-sqlalchemy-utils
 SUBDIR += py-sqlite3
 SUBDIR += py-sqlobject
 SUBDIR += py-sqlparse
