--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1133,6 +1133,7 @@ SUBDIR += pth-hard
 SUBDIR += ptlib
 SUBDIR += pthreadpool
 SUBDIR += py-Automat
+SUBDIR += py-Faker
 SUBDIR += py-Jinja2
 SUBDIR += py-QtPy
 SUBDIR += py-absl-py
@@ -1244,6 +1245,7 @@ SUBDIR += py-exceptiongroup
 SUBDIR += py-executing
 SUBDIR += py-expandvars
 SUBDIR += py-extras
+SUBDIR += py-factory-boy
 SUBDIR += py-fasteners
 SUBDIR += py-fixtures
 SUBDIR += py-flake8
@@ -1580,6 +1582,7 @@ SUBDIR += py-unicodedata2
 SUBDIR += py-unidiff
 SUBDIR += py-unittest2
 SUBDIR += py-usb
+SUBDIR += py-validators
 SUBDIR += py-versioneer
 SUBDIR += py-versioningit
 SUBDIR += py-virtualenv
