--- a/www/Makefile
+++ b/www/Makefile
@@ -293,6 +293,7 @@ SUBDIR += py-requests-oauthlib
 SUBDIR += py-requests-toolbelt
 SUBDIR += py-requests-unixsocket
 SUBDIR += py-requests_ntlm
+SUBDIR += py-respx
 SUBDIR += py-rfc3986
 SUBDIR += py-rfc3987
 SUBDIR += py-soupsieve
