--- a/devel/Makefile
+++ b/devel/Makefile
@@ -48,6 +48,7 @@ SUBDIR += R-cran-promises
 SUBDIR += R-cran-proto
 SUBDIR += R-cran-purrr
 SUBDIR += R-cran-rJava
+SUBDIR += R-cran-rappdirs
 SUBDIR += R-cran-registry
 SUBDIR += R-cran-rematch2
 SUBDIR += R-cran-reshape
