--- a/devel/Makefile
+++ b/devel/Makefile
@@ -23,6 +23,7 @@ SUBDIR += R-cran-desc
 SUBDIR += R-cran-diffobj
 SUBDIR += R-cran-evaluate
 SUBDIR += R-cran-fansi
+SUBDIR += R-cran-fontawesome
 SUBDIR += R-cran-foreach
 SUBDIR += R-cran-future
 SUBDIR += R-cran-generics
