converters/R-cran-base64enc: fix

--- a/converters/R-cran-base64enc/Makefile
+++ b/converters/R-cran-base64enc/Makefile
@@ -4,11 +4,11 @@ PORTREVISION=	5
 CATEGORIES=	converters
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	tota@FreeBSD.org
+MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tools for base64 encoding
 WWW=		https://cran.r-project.org/web/packages/base64enc/
 
-LICENSE=	GPLv2+
+LICENSE=	gpl2+
 
 USES=		cran:auto-plist,compiles
 
