games/linux-enemyterritory-etpub: fix

--- a/games/linux-enemyterritory-etpub/Makefile
+++ b/games/linux-enemyterritory-etpub/Makefile
@@ -10,7 +10,7 @@ EXTRACT_ONLY=	${DISTNAME}${EXTRACT_SUFX}
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	ET Pub - An Enemy Territory Modification
 
-LICENSE=	restricted
+LICENSE=	NONE
 
 BUILD_DEPENDS=	et:games/linux-enemyterritory
 RUN_DEPENDS=	${BUILD_DEPENDS}
