japanese/p5-MeCab: turn test off

--- a/japanese/p5-MeCab/Makefile
+++ b/japanese/p5-MeCab/Makefile
@@ -20,6 +20,8 @@ CFLAGS+=	--std=c++14
 
 OPTIONS_DEFINE=	EXAMPLES
 
+NO_TEST=	yes
+
 .include <bsd.port.pre.mk>
 
 PKGNAMEPREFIX:=	${PKGNAMEPREFIX}p5-
