japanese/p5-Text-MeCab: magus test issue

--- a/japanese/p5-Text-MeCab/Makefile
+++ b/japanese/p5-Text-MeCab/Makefile
@@ -21,6 +21,8 @@ USES=		perl5
 USE_PERL5=	configure
 CONFIGURE_ARGS=	</dev/null
 
+NO_TEST=	yes
+
 # dictionary encoding (euc-jp, shift_jis, utf-8)
 ENCODING?=	euc-jp
 
