--- a/x11/xwatchwin/Makefile
+++ b/x11/xwatchwin/Makefile
@@ -10,7 +10,7 @@ COMMENT=	Watch a window on another X server
 LICENSE=	mit
 
 PLIST_FILES=	bin/xwatchwin \
-		man/man1/xwatchwin.1.gz
+		share/man/man1/xwatchwin.1.gz
 
 USES=		imake tar:Z xorg
 USE_XORG=	x11 xext
