x11/xbrightness: update man path

--- a/x11/xbrightness/Makefile
+++ b/x11/xbrightness/Makefile
@@ -5,12 +5,13 @@ MASTER_SITES=	http://disjunkt.com/xbrightness/ ftp://ftp.motoom.net/files/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Brightness and gamma correction through the X server
+WWW=		http://disjunkt.com/xbrightness/
 
-LICENSE=	unknown
+LICENSE=	NONE
 
 USE_XORG=	x11 xxf86vm ice xmu xt xaw
 USES=		imake xorg
 
-PLIST_FILES=	bin/xbrightness man/man1/xbrightness.1.gz
+PLIST_FILES=	bin/xbrightness share/man/man1/xbrightness.1.gz
 
 .include <bsd.port.mk>
