--- a/math/Makefile
+++ b/math/Makefile
@@ -6,6 +6,7 @@ SUBDIR += R-cran-assertthat
 SUBDIR += R-cran-backports
 SUBDIR += R-cran-date
 SUBDIR += R-cran-dplyr
+SUBDIR += R-cran-forcats
 SUBDIR += R-cran-haven
 SUBDIR += R-cran-maps
 SUBDIR += R-cran-mathjaxr
