--- a/graphics/p5-GD/Makefile
+++ b/graphics/p5-GD/Makefile
@@ -1,19 +1,21 @@
 PORTNAME=	GD
-PORTVERSION=	2.78
-PORTREVISION=	1
+PORTVERSION=	2.83
+PORTREVISION=	0
 CATEGORIES=	graphics perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl5 interface to Gd Graphics Library version2
+WWW=		https://metacpan.org/release/GD
 
 LICENSE=	artistic2 gpl
 LICENSE_COMB=	dual
 
-BUILD_DEPENDS=	${RUN_DEPENDS}
-RUN_DEPENDS=	p5-ExtUtils-PkgConfig>=0:devel/p5-ExtUtils-PkgConfig
+BUILD_DEPENDS=	p5-ExtUtils-PkgConfig>=0:devel/p5-ExtUtils-PkgConfig \
+		p5-File-Which>=0:sysutils/p5-File-Which
 LIB_DEPENDS=	libgd.so:graphics/gd
+RUN_DEPENDS=	p5-File-Which>=0:sysutils/p5-File-Which
 
 USES=		perl5
 USE_PERL5=	configure
