--- a/devel/glib20/Makefile
+++ b/devel/glib20/Makefile
@@ -27,6 +27,7 @@ FLAVORS_SUB=	yes
 SKIP_FAKE_CHECK=	libdata/ldconfig/glib-bootstrap
 
 default_EXTRACT_DEPENDS=	${LOCALBASE}/gobject-introspection-bootstrap/bin/g-ir-scanner:devel/gobject-introspection@bootstrap
+default_BUILD_DEPENDS=	git:devel/git
 default_USES=		trigger
 
 bootstrap_PKGNAMESUFFIX=	-bootstrap
