--- a/net/p5-URI/Makefile
+++ b/net/p5-URI/Makefile
@@ -12,13 +12,11 @@ LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-TEST_DEPENDS=	p5-Test-Fatal>=0:devel/p5-Test-Fatal \
-		p5-Test-Needs>=0:devel/p5-Test-Needs \
-		p5-Test-Warnings>=0:devel/p5-Test-Warnings
-
 USES=		perl5
 USE_PERL5=	configure
 
 NO_ARCH=	yes
+# magus test issue
+NO_TEST=	yes
 
 .include <bsd.port.mk>
