--- a/graphics/linux-c7-librsvg2/Makefile
+++ b/graphics/linux-c7-librsvg2/Makefile
@@ -1,16 +1,21 @@
 PORTNAME=	librsvg2
 PORTVERSION=	2.40.20
 DISTVERSIONSUFFIX=	-1.el7
+PORTREVISION=	1
 CATEGORIES=	graphics linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Parse and render SVG vector graphics (CentOS ${LINUX_DIST_VER})
+WWW=		https://live.gnome.org/LibRsvg
 
-LICENSE=	other
+LICENSE=	gpl2
 
-USES=		linux:c7
+USES=		cpe linux:c7
+CPE_VENDOR=	gnome
+CPE_PRODUCT=	librsvg
 USE_LDCONFIG=	yes
-USE_LINUX=	cairo fontconfig freetype gdkpixbuf2 libcroco libxml2 pango png
+USE_LINUX=	cairo fontconfig freetype gdkpixbuf2 imageformats-libs libcroco \
+		libxml2 pango
 USE_LINUX_RPM=	yes
 
 DESCR=		${.CURDIR}/../${PORTNAME}/pkg-descr
