--- a/devel/py-grpcio/Makefile
+++ b/devel/py-grpcio/Makefile
@@ -26,6 +26,6 @@ post-patch:
 
 post-install:
 	${STRIP_CMD} ${FAKE_DESTDIR}${PYTHONPREFIX_SITELIBDIR}/grpc/_cython/cygrpc*.so
-	${REINPLACE_CMD} -e 's|^.*so$$|${PYTHONPREFIX_SITELIBDIR}/grpc/_cython/cygrpc${PYTHON_EXT_SUFFIX}.so|' ${_PYTHONPKGLIST}
+	${REINPLACE_CMD} -e 's|^.*so$$|${PYTHONPREFIX_SITELIBDIR}/grpc/_cython/cygrpc${PYTHON_TAG}.so|' ${_PYTHONPKGLIST}
 
 .include <bsd.port.mk>
