--- a/devel/py-pydantic/Makefile
+++ b/devel/py-pydantic/Makefile
@@ -22,6 +22,6 @@ CPE_VENDOR=	pydantic_project
 NO_TEST=	yes
 
 post-install:
-	@${STRIP_CMD} ${FAKE_DESTDIR}${PYTHON_SITELIBDIR}/pydantic/*${PYTHON_EXT_SUFFIX}.so
+	@${STRIP_CMD} ${FAKE_DESTDIR}${PYTHON_SITELIBDIR}/pydantic/*${PYTHON_TAG}.so
 
 .include <bsd.port.mk>
