devel/p5-PatchReader: cleanup

--- a/devel/p5-PatchReader/Makefile
+++ b/devel/p5-PatchReader/Makefile
@@ -1,8 +1,8 @@
 PORTNAME=	PatchReader
 PORTVERSION=	0.9.6
 CATEGORIES=	devel perl5
-MASTER_SITES=${MASTER_SITE_PERL_CPAN}
-MASTER_SITE_SUBDIR=	../by-authors/id/T/TM/TMANNERM/
+MASTER_SITES=	CPAN
+MASTER_SITE_SUBDIR=	CPAN:TMANNERM
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -12,7 +12,7 @@ WWW=		https://metacpan.org/release/PatchReader
 LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
-USES=		perl5
+USES=		perl5 dos2unix
 USE_PERL5=	configure
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
