graphics/linux-c7-cairo-gobject: dep

--- a/graphics/linux-c7-cairo-gobject/Makefile
+++ b/graphics/linux-c7-cairo-gobject/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	cairo
 PORTVERSION=	1.15.12
 DISTVERSIONSUFFIX=	-4.el7
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	graphics linux
 PKGNAMESUFFIX=	-gobject
 
@@ -11,9 +11,10 @@ COMMENT=	Vector graphics library Cairo (Linux CentOS ${LINUX_DIST_VER})
 LICENSE=	lgpl2.1 mpl
 LICENSE_COMB=	dual
 
-USES=		linux:c7
-USE_LINUX=	cairo dri fontconfig freetype pixman png xorglibs
+USES=		cpe linux:c7
+USE_LINUX=	cairo dri fontconfig freetype imageformats-libs pixman xorglibs
 USE_LINUX_RPM=	yes
+CPE_VENDOR=	cairographics
 
 LIB_DISTNAMES=	${PORTNAME}${PKGNAMESUFFIX}-${DISTVERSIONFULL}
 
