japanese/kbanner: prefix

--- a/japanese/kbanner/Makefile
+++ b/japanese/kbanner/Makefile
@@ -5,11 +5,13 @@ CATEGORIES=	japanese
 MASTER_SITES=	http://kanji.zinbun.kyoto-u.ac.jp/~yasuoka/ftp/program/
 DISTNAME=	${PORTNAME}2
 
-MAINTAINER=	ports@MidnightBSD>org
+MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Displays large Japanese letters on the standard output
 WWW=		http://kanji.zinbun.kyoto-u.ac.jp/~yasuoka/program.html
 
 LICENSE=	NONE
+
+FAKE_OPTS=	trueprefix
 
 USES=		tar:Z
 ALL_TARGET=	kbanner
