--- a/filesystems/xfsm/Makefile
+++ b/filesystems/xfsm/Makefile
@@ -9,6 +9,6 @@ COMMENT=	X File System Monitor
 USES=		imake tar:tgz xorg
 USE_XORG=	xbitmaps x11 xext
 MAKE_ARGS=	CC="${CC}" CCOPTIONS="-DFreeBSD"
-PLIST_FILES=	bin/xfsm man/man1/${PORTNAME}.1.gz
+PLIST_FILES=	bin/xfsm share/man/man1/${PORTNAME}.1.gz
 
 .include <bsd.port.mk>
