--- a/devel/Makefile
+++ b/devel/Makefile
@@ -3,6 +3,7 @@ COMMENT = Development utilities
 SUBDIR += 9base
 SUBDIR += R-cran-R6
 SUBDIR += R-cran-R.methodsS3
+SUBDIR += R-cran-R.oo
 SUBDIR += R-cran-R.utils
 SUBDIR += R-cran-Rcpp
 SUBDIR += R-cran-RUnit
