japanese/font-plemoljp-nf: fix plist

--- a/japanese/font-plemoljp-nf/Makefile
+++ b/japanese/font-plemoljp-nf/Makefile
@@ -33,13 +33,13 @@ FONT_FAMILY+=	PlemolJP35Console_NF
 .endif
 
 do-install:
-	${MKDIR} ${STAGEDIR}${FONTSDIR}
+	${MKDIR} ${FAKE_DESTDIR}${FONTSDIR}
 .for FAMILY in ${FONT_FAMILY}
 .  for STYLE in Bold BoldItalic ExtraLight ExtraLightItalic Italic \
 		Light LightItalic Medium MediumItalic Regular \
 		SemiBold SemiBoldItalic Text TextItalic Thin ThinItalic
 	${INSTALL_DATA} ${WRKSRC}/${FAMILY}/${FAMILY:S/_//}-${STYLE}.ttf \
-		${STAGEDIR}${FONTSDIR}
+		${FAKE_DESTDIR}${FONTSDIR}
 	@${ECHO_CMD} ${FONTSDIR}/${FAMILY:S/_//}-${STYLE}.ttf >> ${TMPPLIST}
 .  endfor
 .endfor
