--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -85,6 +85,7 @@ SUBDIR += libdvdread
 SUBDIR += libfame
 SUBDIR += libmatroska
 SUBDIR += libmediaart
+SUBDIR += libmediainfo
 SUBDIR += libmpeg2
 SUBDIR += libmtp
 SUBDIR += libtheora
@@ -97,6 +98,7 @@ SUBDIR += libvdpau
 SUBDIR += libvpx
 SUBDIR += libx264
 SUBDIR += libxine
+SUBDIR += libzen
 SUBDIR += linux-c7-libtheora
 SUBDIR += linux-c7-libv4l
 SUBDIR += linux-rl9-aom
@@ -113,6 +115,7 @@ SUBDIR += linux-rl9-vmaf
 SUBDIR += linux-tsmuxer
 SUBDIR += linux_dvbwrapper-kmod
 SUBDIR += makemkv
+SUBDIR += mediainfo
 SUBDIR += mjpegtools
 SUBDIR += mlt7
 SUBDIR += mlt7-qt
