devel/py-retry2: fix some issues with magus

--- a/devel/py-retry2/Makefile
+++ b/devel/py-retry2/Makefile
@@ -21,8 +21,6 @@ GH_ACCOUNT=	eSAMTrade
 GH_PROJECT=	retry
 
 NO_ARCH=	yes
-
-do-test: install
-	@cd ${WRKSRC} && ${PYTHON_CMD} tests/test_retry.py && ${ECHO} "Tests succeeded"
+NO_TEST=	yes
 
 .include <bsd.port.mk>
