--- a/sysutils/garcon/Makefile
+++ b/sysutils/garcon/Makefile
@@ -19,7 +19,7 @@ LIB_DEPENDS=	libfontconfig.so:x11-fonts/fontconfig \
 
 USES=		compiler:c11 gettext-tools gmake gnome libtool pathfix \
 		pkgconfig tar:bzip2 xfce
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 intltool
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 intltool
 USE_XFCE=	libmenu
 USE_LDCONFIG=	yes
 
