--- a/x11-wm/xfce4-panel/Makefile
+++ b/x11-wm/xfce4-panel/Makefile
@@ -21,7 +21,7 @@ LIB_DEPENDS=	libfontconfig.so:x11-fonts/fontconfig \
 
 USES=		compiler:c11 desktop-file-utils gettext-tools gmake gnome \
 		libtool pathfix perl5 pkgconfig tar:bzip2 xfce xorg
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 intltool libwnck3
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 intltool libwnck3
 USE_LDCONFIG=	yes
 USE_XFCE=	garcon libexo xfconf
 USE_XORG=	ice sm x11 xext
