--- a/graphics/clutter-gtk3/Makefile
+++ b/graphics/clutter-gtk3/Makefile
@@ -6,7 +6,8 @@ MASTER_SITES=	GNOME
 PKGNAMESUFFIX=	3
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	GTK+ Integration library for Clutter
+COMMENT=	GTK Integration library for Clutter
+WWW=		https://blogs.gnome.org/clutter/
 
 LICENSE=	lgpl2.1
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -16,7 +17,7 @@ LIB_DEPENDS=	libcogl.so:graphics/cogl \
 		libjson-glib-1.0.so:devel/json-glib
 
 USES=		gettext gl gnome localbase meson pkgconfig tar:xz xorg
-USE_GNOME=	cairo gdkpixbuf2 gtk30 introspection:build
+USE_GNOME=	cairo gdkpixbuf gtk30 introspection:build
 USE_XORG=	x11 xcomposite xdamage xext xfixes xi xrandr
 USE_GL=		egl
 USE_LDCONFIG=	yes
