--- a/security/Makefile
+++ b/security/Makefile
@@ -55,6 +55,7 @@ SUBDIR += gnome-keyring
 SUBDIR += gnupg
 SUBDIR += gnupg1
 SUBDIR += gnutls
+SUBDIR += go-cve-dictionary
 SUBDIR += gpgme
 SUBDIR += gpgme-cpp
 SUBDIR += gpgme-qt
@@ -297,6 +298,7 @@ SUBDIR += vm-to-tor
 SUBDIR += vpnc
 SUBDIR += vuxml
 SUBDIR += vxquery
+SUBDIR += wapiti
 SUBDIR += webfwlog
 SUBDIR += wipe
 SUBDIR += wolfssh
