--- a/deskutils/xfce4-notifyd/Makefile
+++ b/deskutils/xfce4-notifyd/Makefile
@@ -23,7 +23,7 @@ LIB_DEPENDS=	libharfbuzz.so:print/harfbuzz \
 
 USES=		compiler:c11 gettext-tools gmake gnome libtool pkgconfig \
 		sqlite tar:bzip2 xfce xorg
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 intltool
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 intltool
 USE_XFCE=	libutil panel
 USE_XORG=	ice sm x11
 
