japanese/mozc-server: lic fix

--- a/japanese/mozc-server/Makefile
+++ b/japanese/mozc-server/Makefile
@@ -32,7 +32,7 @@ BUILD_MOZC_LIST?=	mozc_server
 PKGNAMEPREFIX=	ja-
 PKGNAMESUFFIX=	-server
 
-LICENSE=		BSD3CLAUSE NAISTL
+LICENSE=		bsd3 NAISTL
 LICENSE_COMB=		multi
 LICENSE_FILE_BSD3CLAUSE=	${WRKSRC}/LICENSE
 LICENSE_DISTFILES_BSD3CLAUSE=	${DISTNAME}${EXTRACT_SUFX}
