--- a/x11-themes/xfce-icons-elementary/Makefile
+++ b/x11-themes/xfce-icons-elementary/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	elementary
-PORTVERSION=	0.19
+PORTVERSION=	0.21
 DISTVERSIONPREFIX=v
 PORTREVISION=	1
 CATEGORIES=	x11-themes xfce
@@ -14,7 +14,7 @@ LICENSE=	gpl2
 BUILD_DEPENDS=	optipng:graphics/optipng
 
 USES=		compiler:c11 gnome pkgconfig
-USE_GNOME=	gdkpixbuf2:build gtk30:build
+USE_GNOME=	gdkpixbuf:build gtk30:build
 
 HAS_CONFIGURE=	yes
 
