--- a/x11-toolkits/gtk-sharp30/Makefile
+++ b/x11-toolkits/gtk-sharp30/Makefile
@@ -6,7 +6,8 @@ MASTER_SITES=	GNOME
 PKGNAMESUFFIX=	30
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	GTK+ and GNOME interfaces for the .NET runtime
+COMMENT=	GTK and GNOME interfaces for the .NET runtime
+WWW=		https://www.mono-project.com/Gtk
 
 LICENSE=	lgpl
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -14,11 +15,12 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 LIB_DEPENDS=	libinotify.so:devel/libinotify
 RUN_DEPENDS=	p5-XML-LibXML>=0:textproc/p5-XML-LibXML
 
+USES=		gettext-runtime gmake gnome libtool mono pathfix perl5 \
+		pkgconfig shebangfix tar:xz
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
-USE_GNOME=	cairo gdkpixbuf2 gtk30
-USES=		gettext-runtime gmake gnome libtool mono pathfix perl5 \
-		pkgconfig tar:xz
+USE_GNOME=	cairo gdkpixbuf gtk30
+SHEBANG_FILES=	parser/*.pl
 USE_PERL5=	run
 MAKE_ENV=	INSTALL_STRIP_FLAG=${STRIP}
 
