--- a/x11-toolkits/gtksourceview5/Makefile
+++ b/x11-toolkits/gtksourceview5/Makefile
@@ -1,5 +1,3 @@
-# Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-
 PORTNAME=	gtksourceview
 PORTVERSION=	5.4.1
 PORTREVISION=	1
@@ -10,19 +8,19 @@ DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Text widget that adds syntax highlighting to the GtkTextView widget
+WWW=		https://wiki.gnome.org/Projects/GtkSourceView
 
 LICENSE=	lgpl2.1
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-BUILD_DEPENDS=	vala:lang/vala
 LIB_DEPENDS=	libfribidi.so:converters/fribidi \
 		libpcre2-8.so:devel/pcre2
 
 PORTSCOUT=	limitw:1,even
 
-USES=		compiler:c11 gettext gnome meson pkgconfig tar:xz
+USES=		compiler:c11 gettext gnome meson pkgconfig tar:xz vala:build
 USE_CSTD=	c11
-USE_GNOME=	cairo gdkpixbuf2 gtk40 introspection:build libxml2
+USE_GNOME=	cairo gdkpixbuf gtk40 introspection:build libxml2
 USE_LDCONFIG=	yes
 
 NO_TEST=	yes
