--- a/www/Makefile
+++ b/www/Makefile
@@ -12,6 +12,10 @@ SUBDIR += R-cran-httr
 SUBDIR += R-cran-httr2
 SUBDIR += R-cran-jose
 SUBDIR += R-cran-jquerylib
+SUBDIR += R-cran-miniUI
+SUBDIR += R-cran-pkgdown
+SUBDIR += R-cran-rvest
+SUBDIR += R-cran-scrapeR
 SUBDIR += R-cran-selectr
 SUBDIR += R-cran-servr
 SUBDIR += R-cran-shiny
@@ -347,6 +351,7 @@ SUBDIR += varnish7
 SUBDIR += w3m
 SUBDIR += webalizer
 SUBDIR += webinject
+SUBDIR += webkit2-gtk
 SUBDIR += webkit2-gtk3
 SUBDIR += webkit2-gtk4
 SUBDIR += weblint++
