updating a few ports

--- a/graphics/gegl/Makefile
+++ b/graphics/gegl/Makefile
@@ -57,7 +57,7 @@ OPTIONS_DEFINE=	CAIRO ENSCRIPT FFMPEG PIXBUF GRAPHVIZ JASPER LCMS2 \
 OPTIONS_DEFAULT=CAIRO ENSCRIPT GEXIV2 PIXBUF GRAPHVIZ JASPER LCMS2 \
 		OPENEXR RAW PANGO POPPLER LIBRSVG2 SDL SPIRO V4L WEBP TIFF VAPI
 
-PIXBUF_USE=	GNOME=gdkpixbuf2
+PIXBUF_USE=	GNOME=gdkpixbuf
 PIXBUF_MESON_ENABLED=	gdk-pixbuf
 
 CAIRO_USE=	GNOME=cairo
