--- a/x11-toolkits/gdl/Makefile
+++ b/x11-toolkits/gdl/Makefile
@@ -1,19 +1,19 @@
 PORTNAME=	gdl
-PORTVERSION=	3.34.0
-PORTREVISION=	1
+PORTVERSION=	3.40.0
 CATEGORIES=	x11-toolkits gnome
 MASTER_SITES=	GNOME
-DIST_SUBDIR=	gnome3
+DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Components intended to be shared between GNOME development tools
+WWW=		https://www.gnome.org/
 
 LICENSE=	lgpl
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 PORTSCOUT=	limitw:1,even
 
-USE_GNOME=	cairo gdkpixbuf2 gtk30 intltool introspection:build libxml2
+USE_GNOME=	cairo gdkpixbuf gtk30 intltool introspection:build libxml2
 USES=		gettext gmake gnome libtool localbase pathfix pkgconfig tar:xz
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
