--- a/x11-toolkits/gstreamer1-plugins-gtk/Makefile
+++ b/x11-toolkits/gstreamer1-plugins-gtk/Makefile
@@ -13,6 +13,6 @@ PLIST=  ${.CURDIR}/pkg-plist
 
 USES=    gnome
 USE_GSTREAMER= gl
-USE_GNOME= cairo gdkpixbuf2 gtk30
+USE_GNOME= cairo gdkpixbuf gtk30
 
 .include "${MASTERDIR}/Makefile"
