--- a/x11-toolkits/gtk-sharp20/Makefile
+++ b/x11-toolkits/gtk-sharp20/Makefile
@@ -17,7 +17,7 @@ RUN_DEPENDS=	p5-XML-LibXML>=0:textproc/p5-XML-LibXML
 
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
-USE_GNOME=	cairo gdkpixbuf2 gtk20 libglade2
+USE_GNOME=	cairo gdkpixbuf gtk20 libglade2
 USES=		gettext-runtime gmake libtool mono pathfix perl5 pkgconfig shebangfix
 SHEBANG_FILES=	parser/*.pl
 USE_PERL5=	run
