add some R ports

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -44,6 +44,7 @@ SUBDIR += R-cran-memoise
 SUBDIR += R-cran-mockery
 SUBDIR += R-cran-pak
 SUBDIR += R-cran-parallelly
+SUBDIR += R-cran-parsedate
 SUBDIR += R-cran-pillar
 SUBDIR += R-cran-pkgconfig
 SUBDIR += R-cran-pkgload
@@ -68,13 +69,18 @@ SUBDIR += R-cran-testthat
 SUBDIR += R-cran-tibble
 SUBDIR += R-cran-tidyr
 SUBDIR += R-cran-tidyselect
+SUBDIR += R-cran-timechange
 SUBDIR += R-cran-tinytest
 SUBDIR += R-cran-tidyverse
 SUBDIR += R-cran-tzdb
 SUBDIR += R-cran-urlchecker
+SUBDIR += R-cran-usethis
 SUBDIR += R-cran-uuid
+SUBDIR += R-cran-vcd
 SUBDIR += R-cran-vctrs
 SUBDIR += R-cran-waldo
+SUBDIR += R-cran-webfakes
+SUBDIR += R-cran-whisker
 SUBDIR += R-cran-whoami
 SUBDIR += R-cran-withr
 SUBDIR += R-cran-zeallot
@@ -697,6 +703,7 @@ SUBDIR += p5-Devel-LexAlias
 SUBDIR += p5-Devel-MAT
 SUBDIR += p5-Devel-MAT-Dumper
 SUBDIR += p5-Devel-OverloadInfo
+SUBDIR += p5-Devel-PartialDump
 SUBDIR += p5-Devel-Refcount
 SUBDIR += p5-Devel-Size
 SUBDIR += p5-Devel-StackTrace
@@ -823,11 +830,17 @@ SUBDIR += p5-MooX-Types-MooseLike
 SUBDIR += p5-MooX-Types-MooseLike-Numeric
 SUBDIR += p5-Moose
 SUBDIR += p5-MooseX-ConfigFromFile
+SUBDIR += p5-MooseX-Declare
 SUBDIR += p5-MooseX-Getopt
+SUBDIR += p5-MooseX-LazyRequire
+SUBDIR += p5-MooseX-Meta-TypeConstraint-ForceCoercion
+SUBDIR += p5-MooseX-Method-Signatures
 SUBDIR += p5-MooseX-Params-Validate
+SUBDIR += p5-MooseX-POE
 SUBDIR += p5-MooseX-Role-Parameterized
 SUBDIR += p5-MooseX-SimpleConfig
 SUBDIR += p5-MooseX-StrictConstructor
+SUBDIR += p5-MooseX-Traits
 SUBDIR += p5-MooseX-Types
 SUBDIR += p5-MooseX-Types-Common
 SUBDIR += p5-MooseX-Types-JSON
@@ -835,6 +848,7 @@ SUBDIR += p5-MooseX-Types-LoadableClass
 SUBDIR += p5-MooseX-Types-Path-Class
 SUBDIR += p5-MooseX-Types-Path-Tiny
 SUBDIR += p5-MooseX-Types-Stringlike
+SUBDIR += p5-MooseX-Types-Structured
 SUBDIR += p5-Mouse
 SUBDIR += p5-MouseX-Types
 SUBDIR += p5-Net-DBus
@@ -860,6 +874,7 @@ SUBDIR += p5-Params-Validate
 SUBDIR += p5-Params-ValidationCompiler
 SUBDIR += p5-Parse-CPAN-Meta
 SUBDIR += p5-Parse-Distname
+SUBDIR += p5-Parse-Method-Signatures
 SUBDIR += p5-Parse-RecDescent
 SUBDIR += p5-Parse-Yapp
 SUBDIR += p5-PatchReader
