--- a/www/Makefile
+++ b/www/Makefile
@@ -190,6 +190,8 @@ SUBDIR += p5-POE-Component-Client-HTTP
 SUBDIR += p5-POE-Component-Client-UserAgent
 SUBDIR += p5-POE-Component-Server-HTTP
 SUBDIR += p5-POE-Component-Server-HTTPServer
+SUBDIR += p5-POE-Component-Server-SimpleHTTP
+SUBDIR += p5-POE-Component-Server-SOAP
 SUBDIR += p5-POE-Filter-HTTP-Parser 
 SUBDIR += p5-ParallelUserAgent
 SUBDIR += p5-Plack
