--- a/editors/gedit/Makefile
+++ b/editors/gedit/Makefile
@@ -28,7 +28,7 @@ PORTSCOUT=	limitw:1,even
 USES=		compiler:c11 desktop-file-utils gettext gmake gnome libtool \
 		localbase pathfix pkgconfig python:3.4+ shebangfix tar:xz xorg
 USE_CSTD=	c11
-USE_GNOME=	cairo gdkpixbuf2 gtksourceview3 intlhack introspection \
+USE_GNOME=	cairo gdkpixbuf gtksourceview3 intlhack introspection \
 		libxml2 pygobject3
 SHEBANG_FILES=	plugins/externaltools/data/send-to-fpaste.tool.in
 USE_XORG=	sm x11
