--- a/deskutils/glabels/Makefile
+++ b/deskutils/glabels/Makefile
@@ -1,11 +1,12 @@
 PORTNAME=	glabels
 PORTVERSION=	3.4.1
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	deskutils
 MASTER_SITES=	GNOME
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Program to create labels and business cards
+WWW=		http://snaught.com/glabels/
 
 LICENSE=	gpl2
 
@@ -15,7 +16,7 @@ LIB_DEPENDS=	libsecret-1.so:security/libsecret \
 
 USES=		desktop-file-utils gettext gmake gnome libtool pathfix pkgconfig \
 		shared-mime-info tar:xz
-USE_GNOME=	cairo gdkpixbuf2 gtk30 intltool librsvg2
+USE_GNOME=	cairo gdkpixbuf gtk30 intltool librsvg2
 INSTALL_TARGET=	install-strip
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
