--- a/emulators/vgb-bin/Makefile
+++ b/emulators/vgb-bin/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	vgb
 PORTVERSION=	3.0
 PORTEPOCH=	1
+PORTREVISION=	1
 CATEGORIES=	emulators
 MASTER_SITES=	http://fms.komkon.org/VGB/
 PKGNAMESUFFIX=	-bin
