update some mate ports

--- a/x11/mate-menus/Makefile
+++ b/x11/mate-menus/Makefile
@@ -1,11 +1,12 @@
 PORTNAME=	mate-menus
-PORTVERSION=	1.26.0
+PORTVERSION=	1.28.0
 CATEGORIES=	x11 mate
 MASTER_SITES=	MATE
 DIST_SUBDIR=	mate
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Implementation of the FreeDesktop Desktop Menu Spec
+WWW=		https://mate-desktop.org/
 
 LICENSE=	gpl2 lgpl
 LICENSE_COMB=	dual
